--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/oceanic-zen"]
-	path = themes/oceanic-zen
-	url = https://github.com/barlog-m/oceanic-zen.git
+[submodule "themes/apollo"]
+	path = themes/apollo
+	url = https://github.com/not-matthias/apollo.git
