--- a/config.toml
+++ b/config.toml
@@ -1,20 +1,49 @@
-# The URL the site will be built for
+title = "Makai"
+
 base_url = "https://makai410.dev"
 
-theme = "oceanic-zen"
+theme = "apollo"
 
-# Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
-# Whether to build a search index to be used later on by a JavaScript library
+# Tag
+taxonomies = [{ name = "tags" }]
+# Search
 build_search_index = true
+[search]
+include_title = true
+include_description = true
+include_path = true
+include_content = true
+index_format = "elasticlunr_json"
 
 [markdown]
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
+highlight_theme = "OneHalfDark"
 
 [extra]
-# Put all your custom variables here
-author = "Makai"
-github = "makai410"
+use_cdn = false
+theme = "dark"
+fancy_code = true
+dynamic_note = true           # a note that can be toggled
+mathjax = true
+mathjax_dollar_inline_enable = true
+
+menu = [
+    { name = "/posts", url = "/posts", weight = 1 },
+    { name = "/about", url = "/about", weight = 2 },
+    { name = "/friends", url = "/friends", weight = 3 },
+    { name = "/tags", url = "/tags", weight = 4 },
+]
+
+socials = [
+    { name = "hachyderm", url = "https://hachyderm.io/@makai410", icon = "mastodon" },
+    { name = "github", url = "https://github.com/makai410/", icon = "github" },
+]
+
+stylesheets = [
+    # "custom.css"    # at /static/custom.css
+]
+
+[extra.analytics]
+enabled = false
