--- a/config.toml
+++ b/config.toml
@@ -30,10 +30,10 @@ mathjax = true
 mathjax_dollar_inline_enable = true
 
 menu = [
-    { name = "/posts", url = "/posts", weight = 1 },
-    { name = "/about", url = "/about", weight = 2 },
-    { name = "/friends", url = "/friends", weight = 3 },
-    { name = "/tags", url = "/tags", weight = 4 },
+    { name = "/posts[English]", url = "/english", weight = 1},
+    { name = "/posts[Chinese]", url = "/chinese", weight = 2 },
+    { name = "/about", url = "/about", weight = 3 },
+    { name = "/tags", url = "/tags", weight = 3 },
 ]
 
 socials = [
